# GNN

./: .gitignore  README.md  __init__.py  functional.py  geometric.py  gnn_extractor.py  graph_net.py  graph_net_actor.py  graph_net_critic.py  graph_net_geometric.py  graph_net_local.py  graph_net_pool_only.py  graph_policy.py  node_extractor.py  pyproject.toml
gnn_policy/: __init__.py  convert_agent.py  functional.py  functional_jax.py  gnn_extractor.py  graph_actor_critic_agent.py  graph_net_actor.py  graph_net_critic.py  graph_net_geometric.py  graph_net_local.py  graph_net_pool_only.py  graph_policy.py  graph_policy_alt.py  kinda_composed.py  loadable_policy.py  node_extractor.py
gnn_policy/gnns/: __init__.py  graph_net.py  graph_net_actor.py  graph_net_critic.py  graph_net_geometric.py  graph_net_local.py  graph_net_pool_only.py
tests/: test_gnn.py  test_gnn_jax.py  test_gnn_jax_composed.py
