[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gnn_policy"
version = "0.0.1"
dependencies = [
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.optional-dependencies]
cpu = ["torch==2.5.0", "torch_scatter==2.1.2+pt25cpu"]
cu124 = ["torch==2.5.0", "torch_scatter==2.1.2+pt25cu124", "pynvml"]
jax_cpu = ["jax", "optax", "flax"]
jax_gpu = ["jax[cuda12]", "optax", "flax"]
rl = ["mlflow>=2.21.0", "tyro>=0.9.17", "wandb>=0.19.8"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
regawa = { workspace = true }


[tool.uv]
find-links = [
  "https://data.pyg.org/whl/torch-2.5.0+cu124.html",
  "https://data.pyg.org/whl/torch-2.5.0+cpu.html",
]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]
